<resources>
    <string name="app_name">TravelJournal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Andreea Carmina</string>
    <string name="nav_header_subtitle">andreea.carmina@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="about_us">About Us</string>
    <string name="contact">Contact</string>
    <string name="share">Share</string>
    <string name="trip_name">Trip Name</string>
    <string name="destination">Destination</string>
    <string name="price">Price</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_share">Share</string>
    <string name="menu_aboutus">About Us</string>
    <string name="city_break">City Break</string>
    <string name="sea_side">Sea Side</string>
    <string name="mountains">Mountains</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="pick_start_date">Pick start date</string>
    <string name="pick_end_date">Pick end date</string>
    <string name="save">Save</string>
    <string name="_0">0</string>
    <string name="about_us_description">Hi, I am Carmina, a developer from Bucharest and I am currently studying Systems Engineering
                                        at the Faculty of Automatic Control and Computers within the Polytechnic University of Bucharest.\nThis is a project i\'ve been working on for my Android Fundamentals class.\nI\'m a tech enthusiast and I try to improve the user experience in this application.\nIt is a work in progress, but feel free to leave me feedback and let me know what you think.
                                        </string>
    <string name="contact_title">Get in touch with us!</string>
    <string name="contact_info">Send us a message on app.developer@gmail.com</string>
    <string name="share_title">Share with your friends</string>
    <string name="share_info">"Because i care about you, here\'s a link to a great Travel Journal app!"</string>
    <string name="image_description">image_description</string>
    <string name="from">From</string>
    <string name="line_date_separator">-</string>
    <string name="until">Until</string>
    <string name="empty_not_saved">Empty! Not saved</string>
    <string name="no_word">No word</string>
    <string name="add_trip">Add trip</string>
    <string name="no_trip">No trip</string>
    <string name="no_destination">No destination</string>
    <string name="error_getting_weather">ERROR getting weather data</string>
    <string name="unknown_trip">Unknown trip</string>
    <string name="unknown_destination">Unknown destination</string>
    <string name="no_data">\?</string>
    <string name="check_weather">Check weather</string>
    <string name="see_trips">See trips</string>
    <string name="city">City</string>
    <string name="temperature">Temperature</string>
    <string name="feels_like">Feels like</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="favorites">Favorites</string>
</resources>