<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/ic_baseline_article_24"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_baseline_contact_mail_24"
            android:title="@string/contact" />
        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/share" />
    </group>
</menu>