<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollViewAddTrip"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AddTripActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayoutAddTrip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/medium_margin">

        <Button
            android:id="@+id/datePickerStartDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:background="@color/dark_blue"
            android:onClick="openDatePickerStartDate"
            android:text="@string/pick_start_date"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBarPrice" />

        <Button
            android:id="@+id/datePickerEndDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:background="@color/dark_blue"
            android:onClick="openDatePickerEndDate"
            android:text="@string/pick_end_date"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/seekBarPrice" />

        <Button
            android:id="@+id/buttonSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/big_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:background="@color/dark_blue"
            android:onClick="saveDataOnClick"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ratingBar" />

        <EditText
            android:id="@+id/editTextDestination"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/destination"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/medium_font"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTripName" />

        <EditText
            android:id="@+id/editTextTripName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:layout_marginEnd="@dimen/medium_margin"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/trip_name"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/title_font"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/small_margin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextDestination">

            <RadioButton
                android:id="@+id/radioButtonCityBreak"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="changeBackgroundToCityBreak"
                android:text="@string/city_break"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_font" />

            <RadioButton
                android:id="@+id/radioButtonSeaSide"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="changeBackgroundToSeaSide"
                android:text="@string/sea_side"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_font" />

            <RadioButton
                android:id="@+id/radioButtonMountains"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="changeBackgroundToMountain"
                android:text="@string/mountains"
                android:textColor="@color/black"
                android:textSize="@dimen/normal_font" />
        </RadioGroup>

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_margin"
            android:layout_marginEnd="@dimen/small_margin"
            android:numStars="5"
            android:rating="3"
            android:scaleX="0.5"
            android:scaleY="0.5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDateStart" />

        <SeekBar
            android:id="@+id/seekBarPrice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:indeterminate="false"
            android:max="10000"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/datePickerEndDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewPriceValue" />

        <TextView
            android:id="@+id/textViewDateStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:background="@color/white"
            android:text="@string/start_date"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_font"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/datePickerStartDate" />

        <TextView
            android:id="@+id/textViewDateEnd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:text="@string/end_date"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_font"
            app:layout_constraintStart_toStartOf="@+id/datePickerEndDate"
            app:layout_constraintTop_toBottomOf="@+id/datePickerEndDate" />

        <TextView
            android:id="@+id/textViewSliderPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/white"
            android:text="@string/price"
            android:textColor="@color/black"
            android:textSize="@dimen/normal_font"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

        <TextView
            android:id="@+id/textViewPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_margin"
            android:layout_marginTop="@dimen/extra_small_margin"
            android:background="@color/white"
            android:text="@string/_0"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewSliderPrice" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>