<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_7"
    android:padding="@dimen/medium_padding"
    tools:context=".retrofit.WeatherActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.7"
        android:clickable="true"
        android:focusable="true"
        app:cardCornerRadius="@dimen/extra_small_margin"
        app:cardElevation="@dimen/extra_small_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.7"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="@dimen/medium_padding">

            <TextView
                android:id="@+id/txt_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/big_margin"
                android:hint="@string/city"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_blue"
                android:textSize="@dimen/medium_font"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/txt_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/extra_small_margin"
                android:hint="@string/temperature"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_blue"
                android:textSize="@dimen/medium_font"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_city" />

            <TextView
                android:id="@+id/txt_temperature_feels_like"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/extra_small_margin"
                android:hint="@string/feels_like"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_blue"
                android:textSize="@dimen/medium_font"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_temperature" />

            <TextView
                android:id="@+id/txt_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/extra_small_margin"
                android:hint="@string/humidity"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_blue"
                android:textSize="@dimen/medium_font"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_temperature_feels_like" />

            <TextView
                android:id="@+id/txt_press"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:layout_marginTop="@dimen/extra_small_margin"
                android:hint="@string/pressure"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_blue"
                android:textSize="@dimen/medium_font"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_humidity" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>