<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayoutTripItem"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/medium_padding">

    <ImageButton
        android:id="@+id/buttonBookmark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/white"
        android:src="@drawable/ic_bookmark_unsaved"
        app:layout_constraintEnd_toEndOf="@+id/textViewDestination"
        app:layout_constraintStart_toStartOf="@+id/textViewDestination"
        app:layout_constraintTop_toBottomOf="@+id/textViewDestination" />

    <ImageView
        android:id="@+id/imageTrip"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/image_trip_1" />

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="true"
        android:numStars="5"
        android:rating="3"
        android:scaleX="0.5"
        android:scaleY="0.5"
        app:layout_constraintEnd_toEndOf="@+id/imageTrip"
        app:layout_constraintStart_toStartOf="@+id/imageTrip"
        app:layout_constraintTop_toBottomOf="@+id/imageTrip" />

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/extra_small_margin"
        android:layout_marginBottom="@dimen/extra_small_margin"
        android:alpha=".6"
        android:background="@color/white"
        android:text="@string/price"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/imageTrip"
        app:layout_constraintEnd_toEndOf="@+id/imageTrip" />

    <TextView
        android:id="@+id/textViewTripName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trip_name"
        android:textColor="@color/black"
        android:textSize="@dimen/title_font"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageTrip"
        app:layout_constraintTop_toTopOf="@+id/imageTrip" />

    <TextView
        android:id="@+id/textViewDestination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/extra_small_margin"
        android:text="@string/destination"
        android:textColor="@color/black"
        android:textSize="@dimen/medium_font"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageTrip"
        app:layout_constraintTop_toBottomOf="@+id/textViewTripName" />

</androidx.constraintlayout.widget.ConstraintLayout>